第三方对接框架（包含出站入站）代码除此提交